fix(web): allow scroll when cursor is on swipe area (#245)
* fix(web): allow scroll when cursor is on swipe area

* fix(web): hide body scrollbar on iOS

--- a/service/vspo-schedule/web/src/styles/globals.css
+++ b/service/vspo-schedule/web/src/styles/globals.css
@@ -6,50 +6,15 @@
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
   height: 100%;
+  overflow-x: hidden;
+}
+
+body {
+  position: relative;
 }
 
 a {
   color: inherit;
   text-decoration: none;
-}
-#onesignal-bell-container.onesignal-reset.onesignal-bell-container-bottom-right {
-  top: 83px;
-  right: 24px !important;
-  bottom: unset !important;
-  border-color: transparent !important;
-  display: none !important;
-}
-
-@media screen and (max-width: 599px) {
-  #onesignal-bell-container.onesignal-reset.onesignal-bell-container-bottom-right {
-    top: 79px;
-    right: 16px !important;
-  }
-}
-
-#onesignal-bell-container.onesignal-reset
-  .onesignal-bell-launcher
-  .onesignal-bell-launcher-button
-  svg {
-  width: 36px !important;
-  height: 36px !important;
-}
-
-#onesignal-bell-container.onesignal-reset
-  .onesignal-bell-launcher.onesignal-bell-launcher-theme-default
-  .onesignal-bell-launcher-button
-  svg
-  .background {
-  fill: transparent !important;
-}
-
-#onesignal-bell-container.onesignal-reset
-  .onesignal-bell-launcher.onesignal-bell-launcher-theme-default
-  .onesignal-bell-launcher-button
-  svg
-  .stroke {
-  stroke: transparent !important;
 }
